--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "firebase": "^4.2.0",
+    "fullcalendar": "^3.6.1",
     "moment": "^2.22.2",
+    "ng-fullcalendar": "^1.6.2",
     "ng2-validation": "^4.2.0",
     "nodemailer": "^4.6.7",
     "primeicons": "^1.0.0-beta.9",
